# NLG_chatbot_comparison

./: .gitignore  LICENSE  README.md  nlg_analysis.py  nlg_train.py  pyproject.toml  setup.cfg
cfg/: analysis_config.yaml  train_config.yaml
nlg_analysis/: nlg_analysis.py  nlg_train.py  question.csv  utils.py
nlg_analysis/cfg/: __init__.py  analysis_config.py  analysis_config.yaml  base_config.py  train_config.py
nlg_analysis/data/: question.csv
nlg_analysis/models/: __init__.py  base_model.py  bert_model.py  conversation_side.py  gpt_model.py  gru_model.py  one_step_model.py  rnn_model.py  rule_model.py  seq2seq_decoder.py  seq2seq_encoder.py  seq2seq_model.py  seq2seq_utils.py
tests/: test_config.py  test_utils.py
tests/resources/: sample_questions.csv  saved_conversations.txt
