[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.5.1<2.0.0
    PyYAML>=6.0<7.0
    transformers>=4.12.5<5.0.0
    datasets>=1.15.1<2.0.0
    tensorflow>=2.11.0<3.0.0
    torch>=1.1.0<2.0.0
    pre-commit>=2.2.0<3.0.0
    black>=22.10.0<23.0.0
    flake8>=6.0.0<7.0.0
    isort>=5.10.1<6.0.0
    spacy>=3.0.0<4.0.0